--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,7 +3,13 @@ $light-blue: #6689B7;
 $light-grey: #E7E7E7;
 $blue: #366094;
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
+  height: 100%;
   font-size: 0.8rem;
   padding: 0;
   margin: 0;
