--- a/sass/header.scss
+++ b/sass/header.scss
@@ -35,6 +35,7 @@
     padding: 1rem;
     border: 1px solid rgba(0,0,0,0);
     box-sizing: border-box;
+    border-bottom: none;
 
     &--active {
       color: $light-blue;
