--- a/sass/editor.scss
+++ b/sass/editor.scss
@@ -12,7 +12,7 @@
 
   transform: translateX(0%);
   background: #fff;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
