Use a value for font-family that works on all platforms

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -13,5 +13,5 @@ body {
   font-size: 0.8rem;
   padding: 0;
   margin: 0;
-  font-family: sans;
+  font-family: sans, sans-serif, arial, verdana;
 }
