--- a/sass/editor.scss
+++ b/sass/editor.scss
@@ -10,6 +10,7 @@
     }
   }
 
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
   transform: translateX(0%);
   background: #fff;
   position: fixed;
